crates/swc_ecma_parser/tests/typescript-errors/interface/invalid-heritage-clause/index.ts
interface Derived extends Base?.x {}
